# peggle

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.h  juego.c  juego.h  lectura.c  lectura.cpp  lectura.h  lista.c  lista.h  obstaculo.c  obstaculo.h  peggle  peggle.c  play  poligono.c  poligono.h  tipos.h  todo.txt
.github/workflows/: c-cpp.yml
include/: ball.h  bola.h  cannon.h  hybrid_renderer.h  juego.h  lectura.h  level.h  lifes.h  lista.h  loader.h  obstacle.h  obstaculo.h  peggle.h  poligono.h  polygon.h  recuperador.h  renderer.h  retriever.h  settings.h  tipos.h  trajectory.h  trayectoria.h  types.h  utility.h  vec2.h  vidas.h
source/: ball.cpp  bola.cpp  cannon.cpp  game.cpp  hybrid_renderer.cpp  juego.cpp  lectura.cpp  level.cpp  lifes.cpp  loader.cpp  main.cpp  obstacle.cpp  obstaculo.cpp  peggle.cpp  poligono.cpp  polygon.cpp  recuperador.cpp  renderer.cpp  retriever.cpp  trajectory.cpp  trayectoria.cpp  vec2.cpp  vidas.cpp
